# apirl

./: .mailmap  APIRL.cpp  APIRL.dox.in  CMakeLists.txt  Readme.txt  apirl-sourceforge.kdev4  build.sh  environment_config.sh  environment_config_release.sh
Doxygen/: generateDOC.cmake
FindCUDA/: CMakeLists.txt  FindCUTIL.cmake  FindCuda.html  LICENSE.txt
FindCUDA/src/: CMakeLists.txt  external_dependency.h  external_dependency3.h  main.cc  main_for_lib.cc  test_bin.cu  test_lib.cu
cmd/: CMakeLists.txt  cmd.cmake  link.cmake
cmd/src/: MLEM.cpp  OSEM.cpp  backproject.cpp  generateACFs.cpp  generateImage.cpp  generateSystemMatrix.cpp  getProjectorFromInterfile.cpp  project.cpp
cmdGPU/: CMakeLists.txt  cmdGPU.cmake  link.cmake
cmdGPU/inc/: readCudaParameters.h
cmdGPU/src/: cuMLEM.cpp  readCudaParameters.cpp
data/: CMakeLists.txt  data.cmake  link.cmake
data/inc/: GenImageParameters.h  Images.h  Interfile.h  Logger.h  Michelogram.h  ParametersFile.h  Projection.h  Segment.h  SegmentIn3DArPet.h  SegmentInCylindrical3Dpet.h  SegmentInSiemensMmr.h  Sinogram2D.h  Sinogram2Din3DArPet.h  Sinogram2DinCylindrical3Dpet.h  Sinogram2DinSiemensMmr.h  Sinogram2Dtgs.h  Sinogram2DtgsInSegment.h  Sinogram3D.h  Sinogram3DArPet.h  Sinogram3DCylindricalPet.h  Sinogram3DSiemensMmr.h  Sinograms2Din3DArPet.h  Sinograms2DinCylindrical3Dpet.h  Sinograms2DinSiemensMmr.h  Sinograms2DmultiSlice.h  SystemMatrix.h  readParameters.h
data/medcon/: m-algori.c  m-algori.h  m-color.c  m-color.h  m-config.h  m-debug.c  m-debug.h  m-defs.h  m-depend.h  m-error.c  m-error.h  m-fancy.c  m-fancy.h  m-files.c  m-files.h  m-global.c  m-global.h  m-intf.c  m-intf.h  m-progress.c  m-progress.h  m-qmedian.c  m-qmedian.h  m-raw.c  m-raw.h  m-split.c  m-split.h  m-stack.c  m-stack.h  m-structs.c  m-structs.h  m-transf.c  m-transf.h  medcon.h
data/src/: Images.cpp  Interfile.cpp  Logger.cpp  Michelogram.cpp  ParametersFile.cpp  Segment.cpp  SegmentIn3DArPet.cpp  SegmentInCylindrical3Dpet.cpp  SegmentInSiemensMmr.cpp  Sinogram2D.cpp  Sinogram2Din3DArPet.cpp  Sinogram2DinCylindrical3Dpet.cpp  Sinogram2DinSiemensMmr.cpp  Sinogram2Dtgs.cpp  Sinogram2DtgsInSegment.cpp  Sinogram3D.cpp  Sinogram3DArPet.cpp  Sinogram3DCylindricalPet.cpp  Sinogram3DSiemensMmr.cpp  Sinograms2Din3DArPet.cpp  Sinograms2DinCylindrical3Dpet.cpp  Sinograms2DinSiemensMmr.cpp  Sinograms2DmultiSlice.cpp  readParameters.cpp
matlab/: CreateBackprojectConfigFile.m  CreateGenAcfConfigFile.m  CreateMlemConfigFile.m  CreateOsemConfigFile.m  CreateProjectConfigFile.m
matlab/+util/: get_os.m  show_sinos.m
matlab/analysis/: compareLikelihoodOfProjectors.m  getLogLikelihood.m  getReconstructionTimes.m
matlab/andrew_reader_lab_software_interface/: classGpet.m  example_MR_guided_PET.m  example_full_simulation.m  example_full_simulation_2d.m  example_full_simulation_cylindrical.m  example_mmr_data.m  example_real_data_mmr.m  example_real_data_mmr_2.m  example_real_data_mmr_in_mr_res.m  example_real_data_recon_convert2Dicom.m  martin_library_interface.m  set_framework_environment.m  updates.txt
matlab/tests/: generateSinogram2D.m  rectasHexagono.m
matlab/utils/: hist4.m  hist5.m  (+1 more)
recon/: CMakeLists.txt  link.cmake  recon.cmake
recon/inc/: ArPetProjector.h  ConeOfResponseProjector.h  ConeOfResponseProjectorWithAttenuation.h  ConeOfResponseWithPenetrationProjector.h  ConeOfResponseWithPenetrationProjectorWithAttenuation.h  Mlem.h  Mlem2d.h  Mlem2dMultiple.h  Mlem2dTgs.h  Mlem2dTgsInSegment.h  MlemSinogram3d.h  OsemSinogram3d.h  Projector.h  RotationBasedProjector.h  Siddon.h  SiddonProjector.h  SiddonProjectorWithAttenuation.h  TriSiddon.h
recon/src/: ArPetProjector.cpp  ConeOfResponseProjector.cpp  ConeOfResponseProjectorWithAttenuation.cpp  ConeOfResponseWithPenetrationProjector.cpp  ConeOfResponseWithPenetrationProjectorWithAttenuation.cpp  Mlem.cpp  Mlem2d.cpp  Mlem2dMultiple.cpp  Mlem2dTgs.cpp  Mlem2dTgsInSegment.cpp  MlemSinogram3d.cpp  OsemSinogram3d.cpp  Projector.cpp  RotationBasedProjector.cpp  Siddon.cpp  Siddon.cpp.edited  SiddonProjector.cpp  SiddonProjectorWithAttenuation.cpp  TriSiddon.cpp
reconGPU/: CMakeLists.txt  link.cmake  reconGPU.cmake
reconGPU/inc/: CUDA_Geometry.h  CUDA_Siddon.h  CuMlemSinogram3d.h  CuOsemSinogram3d.h  CuProjectSinogram3d.h  CuProjector.bak  CuProjector.h  CuProjectorInterface.h  CuSiddon.h  CuSiddonProjector.bak  CuSiddonProjector.h  CudaMlem.h  CudaMlemMichelogram.h  CudaMlemSinogram3d.h  helper_cuda.h  readCudaParameters.h
reconGPU/kernels/: CuMlem_kernels.cu  CuSiddon.cu  CuSiddonProjector_kernels.cu  CuSiddonWithSurfaces.cu  CuSiddonWithTextures.cu
reconGPU/src/: CUDA_Siddon.cu  CuMlemSinogram3d.cu  CuOsemSinogram3d.cu  CuProjector.bak  CuProjector.cpp  CuProjectorInterface.cu  CuSiddon.cu  CuSiddonProjector.bak  CuSiddonProjector.cpp  CuSiddonProjector.cu  CuSiddonProjector_kernels.cu  CudaMlem.cu  CudaMlemMichelogram.cu  CudaMlemSinogram3d.cu  readCudaParameters.cpp
samples/: cuMLEMdebugLinux.par  generate_image.par  generate_image_cilindro_r1_128.par  generate_image_cilindro_r5_128.par  generate_image_point_source_1_FullFov_256_256_81.par  generate_image_point_source_2_FullFov_256_256_81.par  generate_image_point_source_3_FullFov_256_256_81.par  generate_image_point_source_4_FullFov_256_256_81.par  generate_image_point_source_5_FullFov_256_256_81.par  generate_image_point_source_6_FullFov_256_256_81.par  generate_image_uniforme.par  generate_image_uniformeFullFov_128_128_41.par  generate_image_uniformeFullFov_128_128_47.par  generate_image_uniformeFullFov_128_128_81.par  generate_image_uniformeFullFov_256_256_41.par  generate_image_uniformeFullFov_256_256_81.par  generate_image_uniformeFullFov_256_256_82.par  generate_image_uniforme_128.par  reconMLEM.par  reconMLEM_sino3DNema.par  reconMLEM_sinoNemaStir.par  reconMLEM_sinoNemaStir_GPU.par  reconMLEMdebugLinux.par  reconMLEMdebugLinux_Micho.par  samples.txt
utils/: CMakeLists.txt  link.cmake  utils.cmake
utils/inc/: Geometry.h  SparseMatrix.h  Utilities.h  castd.h
utils/src/: Geometry.cpp  SparseMatrix.cpp  Utilities.cpp
(+351 files in other folders)
